// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FavoritesSheet > matches snapshot when open with favorites 1`] = `
<div
  aria-hidden="false"
  class="sheet-backdrop open"
>
  <aside
    aria-label="Favorites notepad"
    aria-modal="false"
    class="favorites-sheet open"
    id="favorites-sheet"
    role="dialog"
  >
    <header
      class="sheet-header"
    >
      <strong>
        Favorites
      </strong>
      <button
        aria-label="Close"
        class="close-btn"
      >
        ×
      </button>
    </header>
    <ul
      class="fav-list"
      role="list"
    >
      <li
        class="fav-item"
      >
        <button
          class="link"
          title="Vis Mojito"
        >
          Mojito
        </button>
        <button
          aria-label="Remove Mojito from favorites"
          class="remove"
          title="Remove"
        >
          Remove
        </button>
      </li>
      <li
        class="fav-item"
      >
        <button
          class="link"
          title="Vis A1"
        >
          A1
        </button>
        <button
          aria-label="Remove A1 from favorites"
          class="remove"
          title="Remove"
        >
          Remove
        </button>
      </li>
    </ul>
  </aside>
</div>
`;

exports[`FavoritesSheet > renders empty state when no favorites 1`] = `
<div
  aria-hidden="false"
  class="sheet-backdrop open"
>
  <aside
    aria-label="Favorites notepad"
    aria-modal="false"
    class="favorites-sheet open"
    id="favorites-sheet"
    role="dialog"
  >
    <header
      class="sheet-header"
    >
      <strong>
        Favorites
      </strong>
      <button
        aria-label="Close"
        class="close-btn"
      >
        ×
      </button>
    </header>
    <p
      class="muted small"
    >
      No favorites yet.
    </p>
  </aside>
</div>
`;
